added mroe languages

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
+<h2 class="page-title">About Me</h2>
 <div class="row">
     <div class="col-md-12">
         <div class="row">
@@ -127,22 +128,85 @@
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
                     <svg width="100" height="50">
-                        <symbol id="c-text">
+                        <symbol id="css-text">
                             <text x="0" y="20" class="text-line">
-                                C
+                                CSS3
                             </text>
                         </symbol>
                         <g>
-                            <use xlink:href="#c-text" class="lang-text"></use>
+                            <use xlink:href="#css-text" class="lang-text"></use>
                         </g>
                     </svg>
-                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 554.625 554.625" style="enable-background:new 0 0 554.625 554.625;" xml:space="preserve">
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 470.699 470.699" style="enable-background:new 0 0 470.699 470.699;" xml:space="preserve" width="64px" height="64px">
+                        <path class="css-lang-icon" d="M426.981,0H43.701C34.52,0,27.632,7.769,28.442,16.949L63.45,409.254c0.811,9.173,8.745,18.774,17.644,21.253  l138.006,38.335c8.887,2.463,23.413,2.479,32.313,0.032l138.177-38.281c8.901-2.472,16.835-11.986,17.645-21.175l35.023-392.469  C443.068,7.769,436.209,0,426.981,0z M360.51,141.611c-0.006,0.06-0.053,0.107-0.112,0.117c-0.06,0.01-0.118-0.021-0.144-0.077  L252.13,185.96c-1.54,0.631-2.418,2.264-2.098,3.897c0.322,1.633,1.754,2.811,3.419,2.811h84.103c4.474,0,8.736,1.9,11.728,5.227  c2.991,3.327,4.429,7.768,3.954,12.216l-13.141,123.273c-0.645,6.048-4.709,11.186-10.447,13.205l-89.269,31.41  c-3.362,1.184-7.027,1.193-10.397,0.025l-88.852-30.778c-5.773-2-9.871-7.153-10.52-13.228l-5.957-55.828  c-0.313-2.931,0.634-5.857,2.604-8.048c1.971-2.192,4.779-3.444,7.727-3.444h24.725c5.313,0,9.769,4.007,10.331,9.289l3.655,34.316  l61.521,21.385l61.803-21.58l7.559-71.17H129.835c-5.297,0-9.746-3.985-10.327-9.25l-3.327-30.164  c-0.508-4.601,2.088-8.982,6.366-10.745l111.837-46.109c1.269-0.523,1.99-1.868,1.724-3.214c-0.267-1.345-1.446-2.314-2.817-2.314  H115.542c-3.545,0-6.518-2.677-6.888-6.201l-3.406-32.421c-0.205-1.951,0.428-3.898,1.741-5.357  c1.313-1.458,3.184-2.291,5.146-2.291h246.379c1.973,0,3.852,0.842,5.166,2.313c1.314,1.472,1.938,3.434,1.715,5.394L360.51,141.611  z" fill="#000000"/>
+                    </svg>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="sql-text">
+                            <text x="0" y="20" class="text-line">
+                                SQL
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#sql-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 588.6 588.6" style="enable-background:new 0 0 588.6 588.6;" xml:space="preserve">
+                        <g>
+                            <path class="sql-lang-icon" d="M359.036,537.786c0.771,0.042,1.551,0.115,2.342,0.115h178.2c20.84,0,37.8-16.959,37.8-37.8v-413.1   c0-20.838-16.96-37.8-37.8-37.8h-178.2c-0.786,0-1.571,0.069-2.342,0.114V0L11.222,46.419v494.562L359.036,588.6V537.786z    M359.036,71.033c0.771-0.113,1.54-0.232,2.342-0.232h178.2c8.933,0,16.199,7.267,16.199,16.2v413.1   c0,8.934-7.267,16.2-16.199,16.2h-178.2c-0.797,0-1.571-0.127-2.342-0.242V71.033z M67.37,329.626   c-11.749-0.311-23.224-3.881-28.917-7.451l4.63-20.45c6.17,3.527,15.723,7.13,25.671,7.299c10.811,0.189,16.577-4.535,16.577-11.86   c0-6.982-4.989-11.011-17.495-15.881c-17.064-6.455-28.033-16.569-28.033-32.537c0-18.736,14.462-33.452,38.833-34.096   c11.852-0.319,20.669,2.133,27.01,5.002l-5.389,20.735c-4.271-2.123-11.805-5.163-22.088-4.989   c-10.188,0.166-15.082,5.194-15.082,10.956c0,7.08,5.822,10.17,19.28,15.56c18.668,7.288,27.567,17.705,27.567,33.694   C109.94,314.614,96.143,330.391,67.37,329.626z M223.928,352.566c-16.82-5.511-30.663-11.021-46.013-18.082   c-2.545-1.107-5.255-1.698-7.944-1.946c-25.315-2.389-48.463-21.932-48.463-59.144c0-34.167,20.838-60.428,54.366-61.314   c35.419-0.934,55.305,26.24,55.305,58.898c0,27.161-12.538,46.093-28.073,52.801v0.706c9.049,2.843,19.24,5.211,28.614,7.394   L223.928,352.566z M327.586,334.721l-78.467-2.03V212.119l27.918-0.72v98.838l50.549,0.822V334.721z" fill="#000000"/>
+                            <path class="sql-lang-icon" d="M175.204,233.06c-17.463,0.303-27.411,17.922-27.411,39.49c-0.177,21.909,10.114,38.857,27.232,39.164   c17.561,0.306,27.917-16.533,27.917-39.675C202.942,250.475,192.934,232.756,175.204,233.06z" fill="#000000"/>
+                            <path class="sql-lang-icon" d="M447.768,392.281c41.913,0,74.714-14.977,74.714-34.093v-21.511c0-3.059-0.886-6.165-2.669-9.207l-0.073-0.122   c1.74-2.926,2.742-6.006,2.742-9.218v-21.51c0-3.059-0.886-6.165-2.669-9.216l-0.231-0.388c1.846-3.014,2.9-6.188,2.9-9.51v-21.508   c0-2.911-0.807-5.875-2.415-8.807l-0.185-0.34c0.475-1.308,0.807-2.647,0.807-4.065c0-17.384-37.568-26.768-72.921-26.768   c-35.322,0-72.879,9.384-72.879,26.768c0,1.418,0.332,2.763,0.812,4.071l-0.189,0.34c-1.614,2.932-2.415,5.896-2.415,8.807v21.508   c0,3.312,1.044,6.491,2.89,9.497l-0.243,0.412c-1.761,3.056-2.646,6.152-2.646,9.21v21.505c0,3.206,0.985,6.28,2.731,9.207   l-0.085,0.138c-1.761,3.048-2.646,6.153-2.646,9.196v21.516C373.096,377.304,405.896,392.281,447.768,392.281z M381.09,259.601   c11.981,10.156,39.772,15.417,66.678,15.417c26.947,0,54.717-5.266,66.714-15.423v17.906c0,12.34-27.38,26.091-66.714,26.091   c-39.298,0-66.678-13.751-66.678-26.091V259.601z M381.09,297.897c12.266,11.227,37.494,18.398,66.678,18.398   c29.225,0,54.453-7.172,66.714-18.409v20.244c0,12.34-27.38,26.093-66.714,26.093c-39.298,0-66.678-13.753-66.678-26.093V297.897z    M381.09,337.954c12.266,11.232,37.494,18.404,66.678,18.404c29.225,0,54.453-7.172,66.714-18.41v20.245   c0,12.34-27.38,26.088-66.714,26.088c-39.298,0-66.678-13.748-66.678-26.088V337.954z" fill="#000000"/>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                 <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="xml-text">
+                            <text x="0" y="20" class="text-line">
+                                XML
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#xml-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 439.875 439.875" style="enable-background:new 0 0 439.875 439.875;" xml:space="preserve">
                         <g>
                             <g>
-                                <path class="c-lang-icon" d="M325.125,286.875h19.125c11.475,0,19.125,7.65,19.125,19.125H382.5c0-21.037-17.213-38.25-38.25-38.25h-19.125    c-21.037,0-38.25,17.213-38.25,38.25v57.375c0,21.037,17.213,38.25,38.25,38.25h19.125c21.037,0,38.25-17.213,38.25-38.25h-19.125    c0,11.475-7.65,19.125-19.125,19.125h-19.125c-11.475,0-19.125-7.65-19.125-19.125V306    C306,294.525,313.65,286.875,325.125,286.875z" fill="#000000"/>
-                                <path class="c-lang-icon" d="M497.25,210.375H363.375V153L248.625,19.125H38.25C17.212,19.125,0,36.337,0,57.375V497.25    c0,21.037,17.212,38.25,38.25,38.25h286.875c21.037,0,38.25-17.213,38.25-38.25V459H497.25c32.513,0,57.375-24.862,57.375-57.375    V267.75C554.625,235.237,529.763,210.375,497.25,210.375z M248.625,47.812L338.513,153H267.75    c-9.562,0-19.125-9.562-19.125-19.125V47.812z M344.25,497.25c0,9.562-7.65,19.125-19.125,19.125H38.25    c-9.562,0-19.125-7.65-19.125-19.125V57.375c0-9.562,7.65-19.125,19.125-19.125H229.5v95.625c0,21.038,17.212,38.25,38.25,38.25    h76.5v38.25H172.125c-32.513,0-57.375,24.862-57.375,57.375v133.875c0,32.513,24.862,57.375,57.375,57.375H344.25V497.25z     M535.5,401.625c0,21.037-17.213,38.25-38.25,38.25H172.125c-21.038,0-38.25-17.213-38.25-38.25V267.75    c0-21.038,17.212-38.25,38.25-38.25H497.25c21.037,0,38.25,17.212,38.25,38.25V401.625z" fill="#000000"/>
+                                <polygon class="xml-lang-icon" points="306,153 286.875,153 286.875,286.875 382.5,286.875 382.5,267.75 306,267.75   " fill="#000000"/>
+                                <polygon class="xml-lang-icon" points="133.875,153 105.188,202.725 76.5,153 57.375,153 95.625,219.938 57.375,286.875 76.5,286.875 105.188,237.15     133.875,286.875 153,286.875 114.75,219.938 153,153   " fill="#000000"/>
+                                <polygon class="xml-lang-icon" points="248.625,153 219.938,210.375 191.25,153 181.688,153 172.125,153 172.125,286.875 191.25,286.875 191.25,191.25     210.375,229.5 219.938,229.5 229.5,229.5 248.625,191.25 248.625,286.875 267.75,286.875 267.75,153 258.188,153   " fill="#000000"/>
+                                <path class="xml-lang-icon" d="M382.5,95.625H57.375C24.862,95.625,0,120.487,0,153v133.875c0,32.513,24.862,57.375,57.375,57.375H382.5    c32.513,0,57.375-24.862,57.375-57.375V153C439.875,120.487,415.013,95.625,382.5,95.625z M420.75,286.875    c0,21.037-17.213,38.25-38.25,38.25H57.375c-21.038,0-38.25-17.213-38.25-38.25V153c0-21.038,17.212-38.25,38.25-38.25H382.5    c21.037,0,38.25,17.212,38.25,38.25V286.875z" fill="#000000"/>
                             </g>
                         </g>
+                    </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="css-text">
+                            <text x="0" y="20" class="text-line">
+                                CSS3
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#css-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 470.699 470.699" style="enable-background:new 0 0 470.699 470.699;" xml:space="preserve" width="64px" height="64px">
+                        <path class="css-lang-icon" d="M426.981,0H43.701C34.52,0,27.632,7.769,28.442,16.949L63.45,409.254c0.811,9.173,8.745,18.774,17.644,21.253  l138.006,38.335c8.887,2.463,23.413,2.479,32.313,0.032l138.177-38.281c8.901-2.472,16.835-11.986,17.645-21.175l35.023-392.469  C443.068,7.769,436.209,0,426.981,0z M360.51,141.611c-0.006,0.06-0.053,0.107-0.112,0.117c-0.06,0.01-0.118-0.021-0.144-0.077  L252.13,185.96c-1.54,0.631-2.418,2.264-2.098,3.897c0.322,1.633,1.754,2.811,3.419,2.811h84.103c4.474,0,8.736,1.9,11.728,5.227  c2.991,3.327,4.429,7.768,3.954,12.216l-13.141,123.273c-0.645,6.048-4.709,11.186-10.447,13.205l-89.269,31.41  c-3.362,1.184-7.027,1.193-10.397,0.025l-88.852-30.778c-5.773-2-9.871-7.153-10.52-13.228l-5.957-55.828  c-0.313-2.931,0.634-5.857,2.604-8.048c1.971-2.192,4.779-3.444,7.727-3.444h24.725c5.313,0,9.769,4.007,10.331,9.289l3.655,34.316  l61.521,21.385l61.803-21.58l7.559-71.17H129.835c-5.297,0-9.746-3.985-10.327-9.25l-3.327-30.164  c-0.508-4.601,2.088-8.982,6.366-10.745l111.837-46.109c1.269-0.523,1.99-1.868,1.724-3.214c-0.267-1.345-1.446-2.314-2.817-2.314  H115.542c-3.545,0-6.518-2.677-6.888-6.201l-3.406-32.421c-0.205-1.951,0.428-3.898,1.741-5.357  c1.313-1.458,3.184-2.291,5.146-2.291h246.379c1.973,0,3.852,0.842,5.166,2.313c1.314,1.472,1.938,3.434,1.715,5.394L360.51,141.611  z" fill="#000000"/>
                     </svg>
                 </span>
             </div>
