--- a/static/about_style.css
+++ b/static/about_style.css
@@ -64,6 +64,39 @@
     animation-delay: 0s;
     animation-fill-mode: forwards;
 }
+.css-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 8px;
+    stroke-dasharray: 2000;
+    stroke-dashoffset: 2000;
+    animation-name: outline;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+}
+.sql-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 8px;
+    stroke-dasharray: 2200;
+    stroke-dashoffset: 2200;
+    animation-name: outline;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+}
+.xml-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 8px;
+    stroke-dasharray: 1500;
+    stroke-dashoffset: 1500;
+    animation-name: outline;
+    animation-duration: 2s;
+    animation-delay: 0s;
+    animation-fill-mode: forwards;
+}
 .text-line{
     font-size: 15px;
 }
