--- a/templates/base.html
+++ b/templates/base.html
@@ -12,12 +12,16 @@
     <link rel="stylesheet" href="/static/about_style.css">
 </head>
 <body style="overflow-x : hidden;">
+    <div id="menu-button">
+        <i id="menu-icon" class="fa fa-bars fa-2x"></i>
+    </div>
     <div class="row" style="height:100%;">
         <!-- Desktop side bar -->
-        <div class="col-md-3 left">
+        <div id="side-bar-wrapper" class="col-md-3 left">
             <div class="side-bar">
                 <ul id="nav" class="nav" style="list-style-type:none">
-                    <li>
+                    <li style="text-align: center;">
+                        <img style="width: 50px; height: 50px; display: inline;" src="/static/headshot.jpg">
                         <h1 id="name">
                             Mitchell Karns
                         </h1>
