--- a/static/about_style.css
+++ b/static/about_style.css
@@ -3,32 +3,41 @@
     text-align: center;
     margin: 0 auto;
 }
-.lang{
-}
 .lang-icon-wrapper{
-    height: 80px;
+    height: 85px;
     width: 90px;
 }
-.python-lang-icon{
+.python-lang-icon1{
     fill: white;
     stroke: black;
-    stroke-width: 0.5px;
+    stroke-width: 0.3px;
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation-name: outline;
-    animation-duration: 10s;
-    animation-delay: 0s;
+    animation-name: outline, strokeFade, fillBlue;
+    animation-duration: 10s, 2s, 2s;
+    animation-delay: 0s, 11s, 11s;
+    animation-fill-mode: forwards;
+}
+.python-lang-icon2{
+    fill: white;
+    stroke: black;
+    stroke-width: 0.3px;
+    stroke-dasharray: 1000;
+    stroke-dashoffset: 1000;
+    animation-name: outline, strokeFade, fillYellow;
+    animation-duration: 10s, 2s, 2s;
+    animation-delay: 0s, 11s, 11s;
     animation-fill-mode: forwards;
 }
 .java-lang-icon{
     fill: white;
     stroke: black;
-    stroke-width: 10px;
+    stroke-width: 8px;
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s,2s;
+    animation-delay: 1s, 10s, 10s;
     animation-fill-mode: forwards;
 }
 .c-lang-icon{
@@ -37,9 +46,9 @@
     stroke-width: 8px;
     stroke-dasharray: 2000;
     stroke-dashoffset: 2000;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 2s, 9s, 9s;
     animation-fill-mode: forwards;
 }
 .javascript-lang-icon{
@@ -48,9 +57,9 @@
     stroke-width: 8px;
     stroke-dasharray: 2000;
     stroke-dashoffset: 2000;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 1s, 10s, 10s;
     animation-fill-mode: forwards;
 }
 .html-lang-icon{
@@ -59,9 +68,9 @@
     stroke-width: 8px;
     stroke-dasharray: 2000;
     stroke-dashoffset: 2000;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillOrange, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 2s, 9s, 9s;
     animation-fill-mode: forwards;
 }
 .css-lang-icon{
@@ -70,9 +79,9 @@
     stroke-width: 8px;
     stroke-dasharray: 2000;
     stroke-dashoffset: 2000;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlue, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 3s, 8s, 8s;
     animation-fill-mode: forwards;
 }
 .sql-lang-icon{
@@ -81,9 +90,9 @@
     stroke-width: 8px;
     stroke-dasharray: 2200;
     stroke-dashoffset: 2200;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 2s, 9s, 9s;
     animation-fill-mode: forwards;
 }
 .xml-lang-icon{
@@ -92,9 +101,75 @@
     stroke-width: 8px;
     stroke-dasharray: 1500;
     stroke-dashoffset: 1500;
-    animation-name: outline;
-    animation-duration: 2s;
-    animation-delay: 0s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 3s, 8s, 8s;
+    animation-fill-mode: forwards;
+}
+.django-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 0.5px;
+    stroke-dasharray: 500;
+    stroke-dashoffset: 500;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 3s, 2s, 2s;
+    animation-delay: 4s, 7s, 7s;
+    animation-fill-mode: forwards;
+}
+.flask-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 8px;
+    stroke-dasharray: 1600;
+    stroke-dashoffset: 1600;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 3s, 8s, 8s;
+    animation-fill-mode: forwards;
+}
+.jquery-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 0.65px;
+    stroke-dasharray: 1600;
+    stroke-dashoffset: 1600;
+    animation-name: outline, fillBlue, strokeFade;
+    animation-duration: 10s, 2s, 2s;
+    animation-delay: 4s, 7s, 7s;
+    animation-fill-mode: forwards;
+}
+.bootstrap-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 0.65px;
+    stroke-dasharray: 1600;
+    stroke-dashoffset: 1600;
+    animation-name: outline, fillPurple, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 5s, 6s, 6s;
+    animation-fill-mode: forwards;
+}
+.node-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 0.65px;
+    stroke-dasharray: 500;
+    stroke-dashoffset: 500;
+    animation-name: outline, fillGreen, strokeFade;
+    animation-duration: 4.5s, 2s, 2s;
+    animation-delay: 4s, 7s, 7s;
+    animation-fill-mode: forwards;
+}
+.angular-lang-icon{
+    fill: white;
+    stroke: black;
+    stroke-width: 8px;
+    stroke-dasharray: 2000;
+    stroke-dashoffset: 2000;
+    animation-name: outline, fillRed, strokeFade;
+    animation-duration: 2s, 2s, 2s;
+    animation-delay: 5s, 6s, 6s;
     animation-fill-mode: forwards;
 }
 .text-line{
@@ -106,9 +181,9 @@
     stroke-width: 1px;
     stroke-dasharray: 1000;
     stroke-dashoffset: 1000;
-    animation-name: outline;
-    animation-duration: 10s;
-    animation-delay: 1s;
+    animation-name: outline, fillBlack, strokeFade;
+    animation-duration: 10s, 2s, 2s;
+    animation-delay: 12s, 13s, 13s;
     animation-fill-mode: forwards;
 }
 
@@ -116,4 +191,46 @@
   to {
     stroke-dashoffset: 0;
   }
+}
+
+@keyframes strokeFade{
+    to {
+        stroke-width: 0px;
+    }
+}
+
+@keyframes fillRed{
+    to {
+        fill: red;
+    }
+}
+@keyframes fillPurple{
+    to {
+        fill: purple;
+    }
+}
+@keyframes fillGreen{
+    to {
+        fill: green;
+    }
+}
+@keyframes fillBlue{
+    to {
+        fill: blue;
+    }
+}
+@keyframes fillBlack{
+    to {
+        fill: black;
+    }
+}
+@keyframes fillOrange{
+    to {
+        fill: orange;
+    }
+}
+@keyframes fillYellow{
+    to {
+        fill: yellow;
+    }
 }
