--- a/templates/main.html
+++ b/templates/main.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block main %}
-<img src="/static/cat.jpg" class="img-responsive">
+<h2 class="page-title">Home</h2>
+<img src="/static/background1.jpg" class="img-responsive">
 <div class="row">
     <div class="col-md-12">
         <h2 id="name-title">Mitchell Karns - Software Engineer</h2>
