--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block extra_styles %}
+<link rel="stylesheet" href="/static/about_style.css">
+{% endblock %}
 {% block main %}
 <h2 class="page-title">About Me</h2>
 <img src="/static/background2.jpg" class="img-responsive">
@@ -369,13 +372,6 @@
     <div class="col-md-12">
         <div class="blurb">
             <p>This is a tech blurb about tech stuff and its long</p>
-        </div>
-    </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <div class="blurb">
-            <p>This is a non tech blurb and its long and stuff and @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@</p>
         </div>
     </div>
 </div>
