--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/style.css">
-    <link rel="stylesheet" href="/static/projects_style.css">
-    <link rel="stylesheet" href="/static/about_style.css">
+    {% block extra_styles %}
+    {% endblock %}
 </head>
 <body style="overflow-x : hidden;">
     <div id="menu-button">
