--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,7 @@
 {% extends "base.html" %}
+{% block extra_styles %}
+<link rel="stylesheet" href="/static/projects_style.css">
+{% endblock %}
 {% block main %}
 <h2 class="page-title">Projects</h2>
 {% for projs in p|batch(2) %}
