putting on finishing touches

--- a/static/style.css
+++ b/static/style.css
@@ -115,9 +115,11 @@ a:active {
     overflow-x: hidden;
 }
 .blurb{
-    padding: 10px 20px;
+    padding: 30px 40px;
     margin: 0px auto;
     word-wrap: normal;
+    font-size: 25px;
+    text-align: center;
 }
 .page-title{
     text-align: center;
