--- a/templates/about.html
+++ b/templates/about.html
@@ -371,7 +371,9 @@
 <div class="row">
     <div class="col-md-12">
         <div class="blurb">
-            <p>This is a tech blurb about tech stuff and its long</p>
+            <p>I've been programming since high school and I graduated UC Berkeley in Electrical Engineering and Computer Science in December 2015. I'm originally from the midwest. When I'm not programming I enjoy hiking, gardening and gaming.</p>
+            <br>
+            <p>Feel free to contact me at mitchkarns [at] gmail.com or find me on LinkedIn by my name.</p>
         </div>
     </div>
 </div>
