changed link locations

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,21 +27,21 @@
                         </h1>
                     </li>
                     <li class="nav-link" id="nav-home">
-                        <a class="nav-link" href="http://127.0.0.1:5000/">
+                        <a class="nav-link" href="http://mitchkarns.com">
                             <span class="fa fa-home fa-2x side-link">
                                 <span id="home" class="nav-text side-link">Home</span>
                             </span>
                         </a>
                     </li>
                     <li class="nav-link" id="nav-about">
-                        <a class="nav-link" href="http://127.0.0.1:5000/about">
+                        <a class="nav-link" href="http://mitchkarns.com/about">
                             <span class="fa fa-user fa-2x side-link">
                                 <span id="about" class="nav-text side-link">About</span>
                             </span>
                         </a>
                     </li>
                     <li class="nav-link" id="nav-projects">
-                        <a class="nav-link" href="http://127.0.0.1:5000/projects">
+                        <a class="nav-link" href="http://mitchkarns.com/projects">
                             <span class="fa fa-desktop fa-2x side-link">
                                 <span id="projects" class="nav-text side-link">Projects</span>
                             </span>
