--- a/templates/about.html
+++ b/templates/about.html
@@ -11,7 +11,8 @@
         <div class="row">
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="65">
+                    <p class="non-svg-text">Python</p>
+                    <svg class="svg-text" width="100" height="65">
                         <symbol id="python-text">
                             <text x="0" y="20" class="text-line">
                                 Python
@@ -34,7 +35,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                  <span class="lang">
-                    <svg width="100" height="65">
+                    <p class="non-svg-text">Java</p>
+                    <svg class="svg-text" width="100" height="65">
                         <symbol id="java-text">
                             <text x="0" y="20" class="text-line">
                                 Java
@@ -62,7 +64,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="65">
+                    <p class="non-svg-text">C</p>
+                    <svg class="svg-text" width="100" height="65">
                         <symbol id="c-text">
                             <text x="0" y="20" class="text-line">
                                 C
@@ -90,7 +93,8 @@
         <div class="row">
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">Javascript</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="javascript-text">
                             <text x="0" y="20" class="text-line">
                                 Javascript
@@ -113,7 +117,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                  <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">HTML5</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="html-text">
                             <text x="0" y="20" class="text-line">
                                 HTML5
@@ -132,7 +137,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">CSS3</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="css-text">
                             <text x="0" y="20" class="text-line">
                                 CSS3
@@ -155,7 +161,8 @@
         <div class="row">
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">SQL</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="sql-text">
                             <text x="0" y="20" class="text-line">
                                 SQL
@@ -176,7 +183,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                  <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">XML</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="xml-text">
                             <text x="0" y="20" class="text-line">
                                 XML
@@ -200,7 +208,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">Django</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="django-text">
                             <text x="0" y="20" class="text-line">
                                 Django
@@ -249,7 +258,8 @@
         <div class="row">
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">Flask</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="flask-text">
                             <text x="0" y="20" class="text-line">
                                 Flask
@@ -271,7 +281,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                  <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">jQuery</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="jquery-text">
                             <text x="0" y="20" class="text-line">
                                 jQuery
@@ -299,7 +310,8 @@
             </div>
             <div class="col-md-4 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">Bootstrap</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="bootstrap-text">
                             <text x="0" y="20" class="text-line">
                                 Bootstrap
@@ -324,7 +336,8 @@
         <div class="row">
             <div class="col-md-6 lang-wrapper">
                 <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">Node.js</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="node-text">
                             <text x="0" y="20" class="text-line">
                                 Node.js
@@ -345,7 +358,8 @@
             </div>
             <div class="col-md-6 lang-wrapper">
                  <span class="lang">
-                    <svg width="100" height="50">
+                    <p class="non-svg-text">AngularJS</p>
+                    <svg class="svg-text" width="100" height="50">
                         <symbol id="angular-text">
                             <text x="0" y="20" class="text-line">
                                 AngularJS
