--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,8 @@
         <div id="side-bar-wrapper" class="col-md-3 left">
             <div class="side-bar">
                 <ul id="nav" class="nav" style="list-style-type:none">
-                    <li style="text-align: center;">
-                        <img style="width: 50px; height: 50px; display: inline;" src="/static/headshot.jpg">
+                    <li id="name-wrapper" style="text-align: center;">
+                        <img id="headshot" src="/static/headshot.jpg">
                         <h1 id="name">
                             Mitchell Karns
                         </h1>
