--- a/static/style.css
+++ b/static/style.css
@@ -29,6 +29,19 @@ a:hover {
 a:active {
     text-decoration: none;
 }
+#name{
+    font-size: 2em;
+    font-weight: bold;
+    text-align: right;
+    padding: 0px 15px;
+    margin: 5px 0px;
+    display: inline;
+}
+#headshot{
+    width: 50px;
+    height: 50px;
+    display: inline;
+}
 @media (max-width: 995px){
     #side-bar-wrapper{
         display: none;
@@ -36,6 +49,19 @@ a:active {
     .col-centered{
         float: none;
         margin: 0 auto;
+    }
+    .nav-link{
+        font-size: 30px;
+    }
+    #name{
+        font-size: 45px;
+    }
+    #name-wrapper{
+        line-height: 75px;
+    }
+    #headshot{
+        width: 75px;
+        height: 75px;
     }
 }
 @media (min-width: 995px){
@@ -82,14 +108,7 @@ a:active {
     font-size : 0.7em;
     color: white;
 }
-#name{
-    font-size: 2em;
-    font-weight: bold;
-    text-align: right;
-    padding: 0px 15px;
-    margin: 5px 0px;
-    display: inline;
-}
+
 .fa{
     color: #F26418;
     padding: 0px 15px;
@@ -108,7 +127,7 @@ a:active {
 }
 #name-title{
     text-align: center;
-    font-size: 3em;
+    font-size: 4em;
 }
 .content{
     overflow-y: scroll;
@@ -124,6 +143,7 @@ a:active {
 .page-title{
     text-align: center;
     font-weight: 300;
+    font-size: 45px;
 }
 #menu-button{
     width: 50px;
